# ROS2-Autonomous-Chess-Agent

install/: local_setup.sh  setup.sh
install/custom_msgs_srvs/include/custom_msgs_srvs/msg/: corners_list.hpp
install/custom_msgs_srvs/include/custom_msgs_srvs/msg/detail/: bitmap__builder.hpp  bitmap__functions.c  bitmap__functions.h  bitmap__rosidl_typesupport_fastrtps_cpp.hpp  bitmap__rosidl_typesupport_introspection_cpp.hpp  bitmap__struct.h  bitmap__struct.hpp  bitmap__traits.hpp  bitmap__type_support.c  (+10 more)
install/custom_msgs_srvs/share/custom_msgs_srvs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msgs_srvs/share/custom_msgs_srvs/cmake/: custom_msgs_srvs__rosidl_generator_cExport.cmake  custom_msgs_srvs__rosidl_typesupport_cExport-noconfig.cmake  custom_msgs_srvs__rosidl_typesupport_introspection_cExport-noconfig.cmake  custom_msgs_srvs__rosidl_typesupport_introspection_cExport.cmake
install/custom_msgs_srvs/share/custom_msgs_srvs/msg/: Bitmap.msg  CornersList.idl
install/project_files/lib/project_files/: board_state_detector
install/project_files/share/project_files/: package.bash  package.sh  package.xml  package.zsh
install/project_files/share/project_files/msg/: Bitmap.msg
log/: latest_build
src/custom_msgs_srvs/: CMakeLists.txt  package.xml
src/custom_msgs_srvs/srv/: GetCorners.srv
src/project_files/: package.xml  setup.cfg  setup.py
src/project_files/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/project_files/install/project_files/lib/project_files/: chess_engine  corner_finder  image_fetcher  move_interpreter
src/project_files/install/project_files/share/project_files/: package.dsv  package.ps1  package.sh  package.xml
src/project_files/install/project_files/share/project_files/launch/: launch.py
src/project_files/install/project_files/share/project_files/msg/: EngineMove.msg
src/project_files/install/project_files/share/project_files/srv/: GetCorners.srv
src/project_files/log/: latest_build
src/project_files/project_files/: ChangeInStateDetector.py  CornerFinder.py  EngineInterface.py  ImageFetcher.py
(+6 files in other folders)
