<?xml version="1.0"?>
<package format="3">
  <name>project_files</name>
  <version>0.0.1</version>
  <description>Project for my robotics class</description>
  <maintainer email="george@michailov.org">george@michailov.org</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- Assuming python-chess is a pip package, not a ROS dependency -->
  <!-- Removed direct msg/srv references -->

  <!-- Add a dependency on your custom message package -->
  <depend>custom_msgs_srvs</depend> <!-- Replace with the actual name of your message package -->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Custom message and service dependencies -->
  <depend>builtin_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
